# MySolanaExperiments

Anchor/vault/: Anchor.toml
Anchor/vault/programs/vault/: Cargo.toml
Anchor/vault/programs/vault/src/: lib.rs
Anchor/vault/scripts/: client.ts
MySolana_PDA/: Cargo.toml
MySolana_PDA/client/: client.js
MySolana_PDA/src/: lib.rs
add_solana_bare/: Cargo.toml
add_solana_bare/client/: client.js
add_solana_bare/src/: lib.rs
many_instr/: Cargo.toml  readme.txt
many_instr/client/: client.js
many_instr/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
my_program/: Anchor.toml
my_program/programs/my_program/: Cargo.toml
my_program/programs/my_program/src/: lib.rs
my_program/tests/: my_program.ts
solana-bare/hello_solana/: Cargo.toml
solana-bare/hello_solana/client/: client.js
solana-bare/hello_solana/src/: lib.rs
